Better HTML description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="node_modules/svelte-material-ui/bare.css" />
+    <meta
+      name="description"
+      content="Certificado de defunción internacional siguiendo estándares CIE-11"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/svelte-material-ui@6.0.0-beta.16/bare.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -17,11 +24,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto+Mono"
     />
-    <title>Svelte + Vite App</title>
     <link
       rel="stylesheet"
       href="https://icdcdn.who.int/embeddedct/icd11ect-1.5.css"
     />
+    <title>Certificado de defunción</title>
   </head>
   <body>
     <div id="app"></div>
