--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/OPS-frontend/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Certificado de defunción internacional siguiendo estándares CIE-11"/><link rel="apple-touch-icon" href="/OPS-frontend/logo192.png"/><link rel="manifest" href="/OPS-frontend/manifest.json"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><title>Certificado de defunción</title><script defer="defer" src="/OPS-frontend/static/js/main.a8e31d18.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Certificado de defunción internacional siguiendo estándares CIE-11"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/svelte-material-ui@6.0.0-beta.16/bare.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+    />
+    <link
+      rel="stylesheet"
+      href="https://icdcdn.who.int/embeddedct/icd11ect-1.5.css"
+    />
+    <title>Certificado de defunción</title>
+    <script type="module" crossorigin src="/assets/index.03cf2cb9.js"></script>
+    <link rel="stylesheet" href="/assets/index.2779c351.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+    <script src="https://icdcdn.who.int/embeddedct/icd11ect-1.5.js"></script>
+  </body>
+</html>
