--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/OPS-frontend/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -29,8 +29,8 @@
       href="https://icdcdn.who.int/embeddedct/icd11ect-1.5.css"
     />
     <title>Certificado de defunción</title>
-    <script type="module" crossorigin src="/assets/index.03cf2cb9.js"></script>
-    <link rel="stylesheet" href="/assets/index.2779c351.css">
+    <script type="module" crossorigin src="/OPS-frontend/assets/index.03cf2cb9.js"></script>
+    <link rel="stylesheet" href="/OPS-frontend/assets/index.2779c351.css">
   </head>
   <body>
     <div id="app"></div>
