deploy: 0f68a52e7b2be5aba71689bc4deca31ce4355243

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/OPS-frontend/favicon.ico" />
+    <link rel="icon" href="/OPS-frontend/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -29,8 +29,8 @@
       href="https://icdcdn.who.int/embeddedct/icd11ect-1.5.css"
     />
     <title>Certificado de defunción</title>
-    <script type="module" crossorigin src="/OPS-frontend/assets/index.0d9ee165.js"></script>
-    <link rel="stylesheet" href="/OPS-frontend/assets/index.ebb27e45.css">
+    <script type="module" crossorigin src="/OPS-frontend/assets/index.f288db3b.js"></script>
+    <link rel="stylesheet" href="/OPS-frontend/assets/index.37a6bc3f.css">
   </head>
   <body>
     <div id="app"></div>
